--- a/index.html
+++ b/index.html
@@ -11,36 +11,16 @@
             height: 100%;
             width: 100%;
             overflow: hidden;
-            background-color: #1a1a1a; /* Твой серый стиль */
+            background-color: #1a1a1a; 
         }
         iframe {
             border: none;
             width: 100%;
             height: 100vh;
         }
-        .back-btn {
-            position: fixed;
-            top: 15px;
-            left: 15px;
-            background: #222;
-            color: #ffffff;
-            padding: 10px 20px;
-            text-decoration: none;
-            font-family: Arial, sans-serif;
-            border-radius: 10px;
-            border: 1px solid #444;
-            z-index: 1000;
-            font-size: 14px;
-        }
-        .back-btn:hover {
-            background: #333;
-            border-color: #00FF00;
-        }
     </style>
 </head>
 <body>
-
-    <a href="index.html" class="back-btn">← Назад</a>
 
     <iframe src="https://invizivive.mydonate.io/" title="Donate to Invizible">
         Твой браузер не тянет фреймы.
